--- a/docs/team/shaunngtx.adoc
+++ b/docs/team/shaunngtx.adoc
@@ -8,6 +8,10 @@
 :stylesDir: ../stylesheets
 :xrefstyle: full
 :experimental:
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+endif::[]
 :contributedCodeUrl: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#=undefined&search=shaunngtx
 :ab3Url: https://github.com/nus-cs2103-AY1920S1/addressbook-level3
 :pullUrl: https://github.com/AY1920S1-CS2103-F10-3/main/pull
