--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -38,10 +38,10 @@ Responsibilities: UI
 
 === Ng Tze Xuan, Shuan
 image::ShaunNgTX.png[width="150", align="left"]
-{empty}[http://github.com/ShaunNgTX[github]] [<<johndoe#, portfolio>>]
+{empty}[http://github.com/ShaunNgTX[github]] [<<shaunngtx#, portfolio>>]
 
 Role: Code Quality +
-Responsibilities: Logic
+Responsibilities: Logic Component
 
 '''
 
