Update shift to replenish

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -285,10 +285,16 @@ From this list of expired items, you can use the `shift` command to move any ite
 
 Format: `shift|<index>`
 
-Example:
+Let's say you have this list of expired items and you want to remind yourself to replenish the first item in the list--the banana.
+To do so, you can transfer the banana to the replenish list by typing `shift|1`, where `1` refers to item number displayed.
 
-* `shift|2` +
-Transfers the 2nd item in the main list to the replenish list.
+.Current list view of items that have expired.
+image::shift_command_example.png[]
+
+With this, your item will be shifted to the replenish list as seen from the figure below.
+
+.List view of items in the replenish list.
+image::shift_replenish_example.png[]
 
 ===== Shifting an item from the replenish list to the main list
 Format: `shift|<index>|<expiry date>[|quantity]`
